--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
     <script src="https://cdn.pubnub.com/pubnub-3.7.16.min.js" type="text/javascript" charset="utf-8"></script>
 
-    <script type="text/javascript" src="js/jquery.thermometer.js"></script>
+    <script type="text/javascript" src="/js/jquery.thermometer.js"></script>
     <script type="text/javascript">
         function RGB2HTML(red, green, blue) {
             var decColor = 0x1000000 + blue + 0x100 * green + 0x10000 * red;
