--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <img src="https://www.paypalobjects.com/webstatic/i/logo/rebrand/ppcom-white.svg" width="150">
     </div>
 
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdn.pubnub.com/pubnub-3.7.16.min.js" type="text/javascript" charset="utf-8"></script>
 
     <script type="text/javascript" src="js/jquery.thermometer.js"></script>
