pubnub ssl enabled

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
 
             var pubnub = PUBNUB.init({
                 publish_key: 'pub-c-1b29544e-6e89-44c6-8163-a6fd0e9302f1',
-                subscribe_key: 'sub-c-79af275c-b112-11e8-8ee3-1e33c3063db8'
+                subscribe_key: 'sub-c-79af275c-b112-11e8-8ee3-1e33c3063db8',
+                ssl: true
             });
 
             pubnub.subscribe({
